# qml-custom-toolbar

./: CMakeLists.txt  FakeStyle.qml  PageToolbar.qml  README.md  ToolbarItem.qml  main.qml
pages/: apple.qml  banana.qml  cherry.qml  durian.qml  elderberry.qml
